fix code and add docker and celery

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 BASE_URL=https://atcsports.io/venues/head-club-tandil-tandil
 
 # Check interval in minutes
-CHECK_INTERVAL=5
+CHECK_INTERVAL=2
 
 # Enable notifications
 ENABLE_NOTIFICATIONS=True 
@@ -10,3 +10,7 @@ ENABLE_NOTIFICATIONS=True
 # Telegram Configuration
 TELEGRAM_BOT_TOKEN=
 TELEGRAM_CHAT_ID=
+
+# Celery configuration
+CELERY_BROKER_URL =redis://redis:6379/0
+CELERY_RESULT_BACKEND =redis://redis:6379/0
