--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 requests==2.31.0
 beautifulsoup4==4.12.2
-python-dotenv==1.0.0
+python-dotenv==1.1.0
 schedule==1.2.1
 selenium==4.18.1
 webdriver-manager==4.0.1
-python-telegram-bot==20.8
+python-telegram-bot==22.1
 SQLAlchemy==2.0.41
+celery>=5.5.3
+redis>=6.2.0
