--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     environment:
       - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
       - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+    volumes:
+      - ./data:/app/data
     depends_on:
       - redis
 
@@ -18,6 +20,8 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - CHECK_INTERVAL=${CHECK_INTERVAL:-5}
+    volumes:
+      - ./data:/app/data
     depends_on:
       - redis
 
@@ -30,6 +34,8 @@ services:
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
       - CHECK_INTERVAL=${CHECK_INTERVAL:-5}
+    volumes:
+      - ./data:/app/data
     depends_on:
       - redis
 
